# Monopoly-Grand-Palace

./: .clang-format  .editorconfig  .gitignore  Board.cpp  Board.h  CMakeLists.txt  CMakePresets.json  DiceRoller.cpp  DiceRoller.h  Grande_Palace_Monopoly_AB_C.7z  Grande_Palace_Monopoly_AB_C_v2.7z  Player.cpp  Player.h  README.md  Tile.cpp  Tile.h  main.cpp
GameUi/: CMakeLists.txt  DiceDialog.cpp  DiceDialog.h  UI.pro  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  video.qrc  這是一封信請看他.txt
Grande_Palace_Monopoly_AB_C/: .gitignore  CMakeLists.txt  command.json  dialogue.json  main.cpp
Grande_Palace_Monopoly_AB_C/Cards/: BarrierCard.cpp  BarrierCard.hpp  Card.cpp  Card.hpp  DemolitionCard.cpp  DemolitionCard.hpp  DiceControlCard.cpp  DiceControlCard.hpp  FateCard.cpp  FateCard.hpp  RocketCard.cpp  RocketCard.hpp  TollCard.cpp  TollCard.hpp
Grande_Palace_Monopoly_AB_C/Commands/: ChangePhaseCommand.cpp  ChangePhaseCommand.hpp  Command.hpp  CommandManager.cpp  CommandManager.hpp  GainCardCommand.cpp  GainCardCommand.hpp  GainMoneyCommand.cpp  GainMoneyCommand.hpp  ListCommandsCommand.cpp  ListCommandsCommand.hpp  MoveToCommand.cpp  MoveToCommand.hpp  ShowAllPlayersCommand.cpp  ShowAllPlayersCommand.hpp  TransferMoneyCommand.cpp  TransferMoneyCommand.hpp  TriggerMiniGameCommand.cpp  TriggerMiniGameCommand.hpp
Grande_Palace_Monopoly_AB_C/Game/: Bank.cpp  Bank.hpp  Board.cpp  Board.hpp  BotPlayer.cpp  BotPlayer.hpp  CardStore.cpp  CardStore.hpp  Error.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  GameRecorder.cpp  GameRecorder.hpp  InputManager.hpp  MiniGameManager.cpp  MiniGameManager.hpp  Player.cpp  Player.hpp  SingletonManager.cpp  SingletonManager.hpp  Utils.cpp  Utils.hpp
Grande_Palace_Monopoly_AB_C/MiniGames/: DragonGateGame.cpp  DragonGateGame.hpp  HorseRaceGame.cpp  HorseRaceGame.hpp  MiniGame.hpp
Grande_Palace_Monopoly_AB_C/Tiles/: EventTile.cpp  EventTile.hpp  HospitalTile.cpp  HospitalTile.hpp  MiniGameTile.cpp  MiniGameTile.hpp  PropertyTile.cpp  PropertyTile.hpp  StartTile.cpp  StartTile.hpp  StoreTile.cpp  StoreTile.hpp  Tile.hpp
Grande_Palace_Monopoly_AB_C/save/: log.json  save1.json  save2.json  save3.json
MiniGame/: MiniGame.sln
MiniGame/MiniGame/: HorseRace.cpp  HorseRace.hpp  MiniGame.hpp  MiniGame.vcxproj  MiniGame.vcxproj.filters  MysteryBox.cpp  MysteryBox.hpp  SheLongMen.cpp  SheLongMen.hpp  main.cpp
MiniGame/MiniGame/Debug/: MiniGame.exe.recipe  MiniGame.ilk  vc142.idb
MiniGame/MiniGame/Debug/MiniGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MiniGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
monopoly/: Error.hpp  InputManager.hpp  Main.cpp  MiniGame.hpp  SingletonManager.cpp  SingletonManager.hpp
monopoly/Cards/: BarrierCard.cpp  BarrierCard.hpp  Card.hpp  DemolitionCard.cpp  DemolitionCard.hpp  DiceControlCard.cpp  DiceControlCard.hpp  FateCard.cpp  FateCard.hpp  RocketCard.cpp  RocketCard.hpp
monopoly/Game/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  Player.cpp  Player.hpp
monopoly/MiniGames/: MiniGameManager.hpp  MinigameManager.cpp
monopoly/Tiles/: Bank.cpp  Bank.hpp  CardStore.cpp  CardStore.hpp  EventTile.cpp  EventTile.hpp  HospitalTile.cpp  HospitalTile.hpp  PropertyTile.cpp  PropertyTile.hpp  StartTile.cpp  StartTile.hpp  StoreTile.cpp  StoreTile.hpp  Tile.hpp
monopoly/Utils/: Utils.cpp  Utils.hpp
monopoly/json/: config.json  dialogue.json
